# Koro

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml  fly.toml  render.yaml
apps/api/: Dockerfile  docker-entrypoint.sh  fly.toml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: __init__.py  main.py
apps/api/app/auth/: jwt.py  routes.py
apps/api/app/core/: catalog.py  config.py  db.py  paths.py
apps/api/app/fusion/: cluster.py  geo_resolve.py  normalize.py  severity.py  trust.py  venue_graph.py  worker.py
apps/api/app/gate/: decide.py
apps/api/app/ingress/: media.py  queue.py  rate_limit.py  reports.py  signals.py
apps/api/app/llm/: client.py  embeddings.py
apps/api/app/models/: __init__.py  base.py  event.py  ledger.py  report.py  sop.py  user.py  venue.py
apps/api/app/organizer/: routes.py
apps/api/app/realtime/: bus.py  routes.py
apps/api/app/rendering/: closure.py  context.py  dispatch.py  fan.py  pathplan.py  staff.py  volunteer.py
apps/api/app/seed/: load_all.py
apps/api/app/simulator/: routes.py  runner.py  scenarios.py
apps/api/app/staff/: routes.py
apps/api/app/state/: routes.py
apps/api/app/volunteer/: routes.py
apps/api/tests/: conftest.py  test_categories.py  test_gate_matrix.py  test_pathplan.py  test_trust_math.py  test_venue_graph.py
apps/web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: page.tsx  (+2 more)
data/: metlife_venue.json  sops.md
data/scenarios/: collusion.json  demo_full_narrative.json  (+1 more)
(+26 files in other folders)
